--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,9 @@ session.vim
 
 /api/logs/**
 /api/monitoring/api_request_logger/logs/**
+/api/monitoring/clientside_error_logs/**
 api/globalConfig.json
-/api/node_modules_backup_*
+/api/node_modules_bacDaskup_*
 
 /sshlogin
 /login_to_phonetics.sh
