add express-status-monitor as proper submodule

--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,7 @@
   },
   "jest": {
     "testTimeout": 10000,
-    "modulePathIgnorePatterns": ["<rootDir>/monitoring/express-status-monitor"],
+    "modulePathIgnorePatterns": ["<rootDir>/express-status-monitor"],
     "preset": "ts-jest/presets/default",
     "globals": {
       "ts-jest": {
@@ -47,7 +47,7 @@
     "express-jwt": "^7.7.5",
     "express-queue": "^0.0.13",
     "express-session": "^1.17.3",
-    "express-status-monitor": "file:monitoring/express-status-monitor",
+    "express-status-monitor": "file:express-status-monitor",
     "formidable": "^1.2.1",
     "generate-password": "^1.6.0",
     "json5": "^2.2.3",
