lots of test cases for quill highlight

--- a/ngapp/angular.json
+++ b/ngapp/angular.json
@@ -121,7 +121,13 @@
 							"src/assets"
 						],
 						"styles": [
-							"src/styles.scss"
+							"src/styles.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "node_modules/angular-text-input-highlight/text-input-highlight.css",
+              "node_modules/quill/dist/quill.core.css",
+              "node_modules/quill/dist/quill.bubble.css",
+              "node_modules/quill/dist/quill.snow.css"
 						],
 						"scripts": []
 					}
