--- a/ngapp/package.json
+++ b/ngapp/package.json
@@ -64,8 +64,11 @@
     "@types/lodash": "^4.14.172",
     "@types/node": "^12.11.1",
     "@types/uuid": "^3.4.4",
+    "assert": "^2.0.0",
+    "cli-progress": "^3.12.0",
     "codelyzer": "^6.0.2",
     "cypress": "^9.6.1",
+    "fs": "^0.0.1-security",
     "jasmine-core": "~4.1.1",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "^6.3.4",
@@ -75,6 +78,7 @@
     "karma-jasmine": "~5.0.1",
     "karma-jasmine-html-reporter": "^2.0.0",
     "protractor": "~7.0.0",
+    "readline": "^1.3.0",
     "schematics-scss-migrate": "^1.3.14",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
