--- a/api/package.json
+++ b/api/package.json
@@ -93,6 +93,7 @@
   "devDependencies": {
     "@jest-mock/express": "^1.4.2",
     "@shelf/jest-mongodb": "^2.2.2",
+    "@types/chai": "^4.3.5",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.7.3",
     "eslint": "^7.32.0",
