--- a/api/package.json
+++ b/api/package.json
@@ -96,6 +96,7 @@
     "@types/chai": "^4.3.5",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.7.3",
+    "@types/supertest": "^2.0.12",
     "eslint": "^7.32.0",
     "eslint-config-google": "^0.14.0",
     "jest": "^28.1.3",
