--- a/api/package.json
+++ b/api/package.json
@@ -8,11 +8,14 @@
     "start": "nodemon -x ts-node server.ts",
     "start:nocheck": "nodemon -x ts-node --transpile-only server.ts",
     "start:prod": "DB=an-scealai PORT=40000 NODE_ENV=prod ts-node --transpile-only server.ts",
-    "start:qa": "DB_HOSTNAME=localhost:27018/ DB=qa PORT=4002 ts-node --transpile-only server.ts"
+    "start:qa": "DB_HOSTNAME=localhost:27018/ DB=qa PORT=4002 ts-node --transpile-only server.ts",
+    "build": "make ready"
   },
   "jest": {
     "testTimeout": 10000,
-    "modulePathIgnorePatterns": ["<rootDir>/express-status-monitor"],
+    "modulePathIgnorePatterns": [
+      "<rootDir>/express-status-monitor"
+    ],
     "preset": "ts-jest/presets/default",
     "globals": {
       "ts-jest": {
@@ -75,7 +78,7 @@
     "stackify-logger": "^3.0.11",
     "stream": "0.0.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.7.4",
+    "typescript": "^5.1.6",
     "util": "^0.12.1",
     "uuid": "^3.3.2",
     "wink-eng-lite-web-model": "^1.4.3",
