use webpack to create backend bundle

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 dist
 
-**/node_modules
-api/monitoring/api_logger/logs
 
-priv_key.pem
-pub_key.pem
+.vscode
+**/node_modules
+
+api/monitoring/api_logger/logs
 
 .DS_Store
 
@@ -21,7 +21,6 @@ session.vim
 /api/monitoring/api_request_logger/logs/**
 /api/monitoring/clientside_error_logs/**
 api/globalConfig.json
-/api/node_modules_bacDaskup_*
 
 /sshlogin
 /login_to_phonetics.sh
