--- a/api/package.json
+++ b/api/package.json
@@ -5,10 +5,11 @@
   "main": "server.ts",
   "scripts": {
     "test": "jest",
-    "start": "nodemon -x ts-node server.ts",
+    "dev": "webpack serve --config webpack.config.js --open",
+    "start": "node dist/server.js",
     "start:nocheck": "nodemon -x ts-node --transpile-only server.ts",
-    "start:prod": "DB=an-scealai PORT=40000 NODE_ENV=prod ts-node --transpile-only server.ts",
-    "start:qa": "DB_HOSTNAME=localhost:27018/ DB=qa PORT=4002 ts-node --transpile-only server.ts",
+    "start:prod": "DB=an-scealai PORT=40000 NODE_ENV=prod node dist/server.js",
+    "start:qa": "DB_HOSTNAME=localhost:27018/ DB=qa PORT=4002 node dist/server.js",
     "build": "make ready"
   },
   "jest": {
@@ -25,10 +26,10 @@
       }
     },
     "setupFiles": [
-      "<rootDir>/test-utils/test-setup.ts"
+      "<rootDir>/src/test-utils/test-setup.ts"
     ],
     "setupFilesAfterEnv": [
-      "<rootDir>/test-utils/test-setup-per-file.ts"
+      "<rootDir>/src/test-utils/test-setup-per-file.ts"
     ],
     "forceExit": true,
     "collectCoverage": false
@@ -46,6 +47,7 @@
     "cookie-parser": "^1.4.6",
     "cookiejar": "^2.1.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.17.0",
     "express-jwt": "^7.7.5",
     "express-queue": "^0.0.13",
@@ -78,7 +80,6 @@
     "stackify-logger": "^3.0.11",
     "stream": "0.0.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6",
     "util": "^0.12.1",
     "uuid": "^3.3.2",
     "wink-eng-lite-web-model": "^1.4.3",
@@ -91,6 +92,7 @@
   "devDependencies": {
     "@jest-mock/express": "^1.4.2",
     "@shelf/jest-mongodb": "^2.2.2",
+    "@types/express": "^4.17.17",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.7.3",
     "eslint": "^7.32.0",
@@ -100,6 +102,11 @@
     "mongodb-memory-server": "^8.12.2",
     "nodemon": "^2.0.21",
     "supertest": "^6.2.3",
-    "ts-jest": "^28.0.7"
+    "ts-jest": "^28.0.7",
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.1.6",
+    "webpack": "^5.88.1",
+    "webpack-cli": "^5.1.4",
+    "workbox-webpack-plugin": "^7.0.0"
   }
 }
