--- a/api/package.json
+++ b/api/package.json
@@ -93,8 +93,9 @@
     "@jest-mock/express": "^1.4.2",
     "@shelf/jest-mongodb": "^2.2.2",
     "@types/express": "^4.17.17",
-    "@types/jest": "^28.1.6",
+    "@types/jest": "^28.1.8",
     "@types/node": "^18.7.3",
+    "@types/webpack": "^5.28.1",
     "eslint": "^7.32.0",
     "eslint-config-google": "^0.14.0",
     "jest": "^28.1.3",
