--- a/api/package.json
+++ b/api/package.json
@@ -62,6 +62,7 @@
     "moment-timezone": "^0.5.40",
     "mongo-unit": "^2.0.1",
     "mongodb": "^4.7.0",
+    "mongodb-client-encryption": "^2.9.0",
     "mongoose": "^6.10.0",
     "multer": "^1.4.2",
     "node": "^16.16.0",
