--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "dev": "webpack serve --config webpack.config.js --open",
-    "start": "node dist/dev-server.js",
+    "start": "make ready && node dist/dev-server.js",
     "start:prod": "DB=an-scealai PORT=40000 NODE_ENV=prod node dist/prod-server.js",
     "start:qa": "DB_HOSTNAME=localhost:27018/ DB=qa PORT=4002 node dist/prod-server.js",
     "build": "make ready"
