--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,9 @@
     "build": "make ready",
     "build:dev": "webpack --progress",
     "watch": "nodemon dist/dev-server.js",
-    "neimhin:watch": "PORT=41001 nodemon dist/dev-server.js"
+    "neimhin:watch": "PORT=41001 nodemon dist/dev-server.js",
+    "maddie:watch": "PORT=42001 nodemon dist/dev-server.js",
+    "oisin:watch": "PORT=43001 nodemon dist/dev-server.js"
   },
   "jest": {
     "testTimeout": 10000,
