--- a/ngapp/package.json
+++ b/ngapp/package.json
@@ -14,7 +14,10 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "cypress:open": "./node_modules/cypress/bin/cypress open",
-    "cypress:run": "./node_modules/cypress/bin/cypress run"
+    "cypress:run": "./node_modules/cypress/bin/cypress run",
+    "neimhin:dev": "ng serve --port 41000 --configuration=dev",
+    "maddie:dev": "ng serve --port 42000 --configuration=dev",
+    "oisin:dev": "ng serve --port 43000 --configuration=dev"
   },
   "dependencies": {
     "@popperjs/core": "^2.9.2",
