--- a/api/package.json
+++ b/api/package.json
@@ -15,7 +15,7 @@
   "jest": {
     "testTimeout": 10000,
     "modulePathIgnorePatterns": [
-      "<rootDir>/express-status-monitor"
+      "<rootDir>/src/express-status-monitor"
     ],
     "preset": "ts-jest/presets/default",
     "globals": {
@@ -52,7 +52,6 @@
     "express-jwt": "^7.7.5",
     "express-queue": "^0.0.13",
     "express-session": "^1.17.3",
-    "express-status-monitor": "file:../express-status-monitor",
     "formidable": "^1.2.1",
     "generate-password": "^1.6.0",
     "json5": "^2.2.3",
@@ -95,7 +94,7 @@
     "@shelf/jest-mongodb": "^2.2.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^28.1.8",
-    "@types/node": "^18.7.3",
+    "@types/node": "^18.16.19",
     "@types/webpack": "^5.28.1",
     "eslint": "^7.32.0",
     "eslint-config-google": "^0.14.0",
