--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "strict": true,
     "outDir": "dist",
+    "rootDir": "src",
     "module": "CommonJS",
     "noImplicitAny": false,
     "allowJs": true,
@@ -13,10 +14,15 @@
 		"allowSyntheticDefaultImports": true
   },
   "exclude": [
-    "utils/test-setup-per-file.js",
-    "utils/test-setup.js",
-    "utils/test-utils.js",
+    "node_modules/typescript/lib/lib.dom.d.ts",
+    "src/express-status-monitor/src/public/*",
+    "src/express-status-monitor/examples/*",
+    "src/utils/test-setup-per-file.js",
+    "src/utils/test-setup.js",
+    "src/utils/test-utils.js",
     "**/*.test.js",
     "**/*.test.ts", 
+    "**/*.spec.js",
+    "**/*.spec.ts", 
     "dist/*"]
 }
