github action example .env

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,15 +23,14 @@ jobs:
           mongodb-version: 3.6
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
-      - run: sudo apt-get install -y parallel openssl
+      - run: sudo apt-get install -y parallel
       - run: npm -v
       - run: npx --prefix ngapp node -v
       - run: "parallel npm i --prefix ::: api ngapp"
       - run: npx --prefix api tsc
       - run: mongod &
       - run: mongod_pid=$!
-      - run: bash keys/dev/jwtRS256-gen.sh
-      - run: mv jwt* dist/keys/dev/
+      - run: mv .env.example .env
       - run: FUDGE=1 AWS_SES_DISABLE=1 npm run --prefix npm start & 
       - run: backend_pid=$!
       - run: npm run --prefix ngapp e2e
