--- a/api/package.json
+++ b/api/package.json
@@ -102,6 +102,6 @@
     "mongodb-memory-server": "^8.12.2",
     "nodemon": "^2.0.21",
     "supertest": "^6.2.3",
-    "typescript": "^5.1.6",
+    "typescript": "^5.1.6"
   }
 }
