--- a/api/package.json
+++ b/api/package.json
@@ -72,6 +72,7 @@
     "request": "^2.88.2",
     "request-api": "^1.1.2",
     "request-ip": "^3.3.0",
+    "source-map-support": "^0.5.21",
     "stackify": "^1.0.17",
     "stackify-logger": "^3.0.11",
     "stream": "0.0.2",
