--- a/api/package.json
+++ b/api/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@aws-sdk/client-ses": "^3.363.0",
     "@google-cloud/speech": "^4.8.0",
+    "@types/multer": "^1.4.7",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "bson": "^4.4.0",
@@ -87,7 +88,6 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@types/passport": "^1.0.12",
     "@jest-mock/express": "^1.4.2",
     "@shelf/jest-mongodb": "^2.2.2",
     "@types/chai": "^4.3.5",
@@ -95,6 +95,7 @@
     "@types/jest": "^28.1.8",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.16.19",
+    "@types/passport": "^1.0.12",
     "@types/supertest": "^2.0.12",
     "@types/webpack": "^5.28.1",
     "eslint": "^7.32.0",
