--- a/ngapp/tsconfig.json
+++ b/ngapp/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es2020",
     "module": "esnext",
     "baseUrl" : "./src",
+    "sourceMap": true,
     "moduleResolution": "node",
     "outDir": "../out-tsc/app",
     "paths": {
