--- a/ngapp/package.json
+++ b/ngapp/package.json
@@ -20,6 +20,7 @@
     "start:oisin": "ng serve --port 43000 --configuration=production"
   },
   "dependencies": {
+    "@phonlab-tcd/gramadoir-ts": "^0.0.2",
     "@popperjs/core": "^2.9.2",
     "@tweenjs/tween.js": "^18.6.4",
     "@types/quill": "^1.3.10",
