protect against undefined property runtime error in feedback-comment-component (need this to pass tests)

--- a/ngapp/angular.json
+++ b/ngapp/angular.json
@@ -113,6 +113,7 @@
           },
 					"options": {
 						"main": "src/test.ts",
+            "sourceMap": true,
 						"polyfills": "src/polyfills.ts",
 						"tsConfig": "tsconfig.spec.json",
 						"karmaConfig": "karma.conf.ts",
