add sourceMap to tsconfig.spec.json

--- a/ngapp/tsconfig.spec.json
+++ b/ngapp/tsconfig.spec.json
@@ -5,6 +5,7 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "outDir": "../out-tsc/spec",
+    "sourceMap": true,
     "types": [
       "jasmine",
       "node",
