--- a/conf/dev.nginx.conf
+++ b/conf/dev.nginx.conf
@@ -4,7 +4,11 @@ server {
     # Proxy for the Angular app running on localhost:4200
     location / {
         proxy_pass http://localhost:4200;
+	proxy_http_version 1.1;
+	proxy_set_header Upgrade $http_upgrade;
+	proxy_set_header Connection "Upgrade";
     }
+
 
     # Proxy for the API running on localhost:4000
     location /api/ {
