trying to get express-status-monitor working again

--- a/api/Makefile
+++ b/api/Makefile
@@ -6,10 +6,14 @@ ifndef NODE_ENV
 NODE_ENV := dev
 endif
 
-ready: dist/server.js dist/keys dist/sendinblue.json dist/monitoring
+ready: dist/server.js dist/express-status-monitor/src/public/ dist/keys dist/sendinblue.json dist/monitoring
 
-dist/server.js: $(WEBPACK_CONFIG) $(SRC_TS_JS_FILES)
+dist/server.js: $(SRC_TS_JS_FILES)
 	npx tsc
+
+dist/express-status-monitor/src/public/:
+	mkdir -p dist/express-status-monitor/src/
+	cp -r src/express-status-monitor/src/public/ dist/express/status-monitor/src/
 
 dist/$(NODE_ENV)-server.js: $(WEBPACK_CONFIG) $(SRC_TS_JS_FILES)
 	watch=false npx webpack --progress --config $(WEBPACK_CONFIG)
