--- a/api/package.json
+++ b/api/package.json
@@ -36,7 +36,6 @@
     "@aws-sdk/client-ses": "^3.363.0",
     "@google-cloud/speech": "^4.8.0",
     "@types/multer": "^1.4.7",
-    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "bson": "^4.4.0",
     "chai-arrays": "^2.2.0",
@@ -51,8 +50,14 @@
     "express-session": "^1.17.3",
     "formidable": "^1.2.1",
     "generate-password": "^1.6.0",
-    "json5": "^2.2.3",
+    "axios": "0.26.0",
+    "debug": "4.1.1",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^9.0.0",
+    "on-headers": "1.0.2",
+    "pidusage": "2.0.18",
+    "socket.io": "^4.4.1",
+    "json5": "^2.2.3",
     "lodash": "^4.17.21",
     "logger": "^0.0.1",
     "moment-timezone": "^0.5.40",
