--- a/conf/dev.nginx.conf
+++ b/conf/dev.nginx.conf
@@ -13,6 +13,9 @@ server {
     # Proxy for the API running on localhost:4000
     location /api/ {
         proxy_pass http://localhost:4000/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
     }
 
     # Additional configurations (if needed)
