use only necessary status monitor files

--- a/api/package.json
+++ b/api/package.json
@@ -36,7 +36,7 @@
     "@aws-sdk/client-ses": "^3.363.0",
     "@google-cloud/speech": "^4.8.0",
     "@types/multer": "^1.4.7",
-    "axios": "^0.21.1",
+    "axios": "0.26.0",
     "body-parser": "^1.19.0",
     "bson": "^4.4.0",
     "chai-arrays": "^2.2.0",
@@ -44,13 +44,16 @@
     "cookie-parser": "^1.4.6",
     "cookiejar": "^2.1.4",
     "cors": "^2.8.5",
+    "debug": "4.1.1",
     "dotenv": "^16.3.1",
+    "event-loop-stats": "^1.4.1",
     "express": "^4.17.0",
     "express-jwt": "^7.7.5",
     "express-queue": "^0.0.13",
     "express-session": "^1.17.3",
     "formidable": "^1.2.1",
     "generate-password": "^1.6.0",
+    "handlebars": "^4.7.7",
     "json5": "^2.2.3",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
@@ -66,13 +69,16 @@
     "node-html-parser": "^1.4.9",
     "node-pandoc-promise": "^0.0.6",
     "nodemailer": "^6.6.1",
+    "on-headers": "1.0.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "pidusage": "2.0.18",
     "qs": "^6.11.1",
     "read": "^1.0.7",
     "request": "^2.88.2",
     "request-api": "^1.1.2",
     "request-ip": "^3.3.0",
+    "socket.io": "^4.4.1",
     "source-map-support": "^0.5.21",
     "stackify": "^1.0.17",
     "stackify-logger": "^3.0.11",
