disable host check in serve mode

--- a/ngapp/angular.json
+++ b/ngapp/angular.json
@@ -84,6 +84,9 @@
 					}
 				},
 				"serve": {
+					"options": {
+						"disableHostCheck": true
+					},
 					"defaultConfiguration": "dev",
 					"builder": "@angular-devkit/build-angular:dev-server",
 					"configurations": {
