strictBindCallApply ngapp tsconfigs

--- a/ngapp/tsconfig.app.json
+++ b/ngapp/tsconfig.app.json
@@ -22,6 +22,7 @@
     "experimentalDecorators": true,
     "importHelpers": true, 
     "target": "es2020",
+    "strictBindCallApply": true,
     "typeRoots": [
       "node_modules/@types"
     ],
