--- a/ngapp/tsconfig.json
+++ b/ngapp/tsconfig.json
@@ -6,6 +6,7 @@
     "sourceMap": true,
     "moduleResolution": "node",
     "outDir": "../out-tsc/app",
+    "strictBindCallApply": true,
     "paths": {
       "node_modules": ["../node_modules"]
     },
