login type checking

--- a/ngapp/src/tsconfig.json
+++ b/ngapp/src/tsconfig.json
@@ -1,12 +1,33 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "noImplicitOverride": true,
+    "noPropertyAccessFromIndexSignature": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "sourceMap": true,
+    "declaration": false,
+    "downlevelIteration": true,
     "experimentalDecorators": true,
+    "moduleResolution": "node",
+    "importHelpers": true,
+    "target": "es2020",
+    "module": "esnext",
+    "useDefineForClassFields": false,
     "outDir": "../out-tsc/app",
+    "strictBindCallApply": true,
     "types": [
       "jquery",
       "node"
     ]
+  },
+  "angularCompilerOptions": {
+    "enableI18nLegacyMessageIdFormat": false,
+    "strictInjectionParameters": true,
+    "strictInputAccessModifiers": true,
+    "strictTemplates": true
   },
   "files": [
     "main.ts",
