update error messages

--- a/ngapp/angular.json
+++ b/ngapp/angular.json
@@ -50,6 +50,7 @@
           },
 					"configurations": {
 						"production": {
+              "sourceMap": true,
               "optimization": {
                 "scripts": true,
                 "styles": {
