--- a/ngapp/tsconfig.app.json
+++ b/ngapp/tsconfig.app.json
@@ -20,8 +20,8 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "importHelpers": true, 
-    "target": "es2020",
+    "importHelpers": true,
+    "target": "ES2022",
     "strictBindCallApply": true,
     "typeRoots": [
       "node_modules/@types"
@@ -32,6 +32,7 @@
       "dom"
     ],
     "resolveJsonModule": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "useDefineForClassFields": false
   }
 }
