--- a/ngapp/tsconfig.json
+++ b/ngapp/tsconfig.json
@@ -1,19 +1,22 @@
 {
   "compilerOptions": {
-    "target": "es2020",
+    "target": "ES2022",
     "module": "esnext",
-    "baseUrl" : "./src",
+    "baseUrl": "./src",
     "sourceMap": true,
     "moduleResolution": "node",
     "outDir": "../out-tsc/app",
     "strictBindCallApply": true,
     "paths": {
-      "node_modules": ["../node_modules"]
+      "node_modules": [
+        "../node_modules"
+      ]
     },
     "types": [
       "jquery",
       "node"
-    ]
+    ],
+    "useDefineForClassFields": false
   },
   "resolveJsonModule": true,
   "files": [
