--- a/ngapp/package.json
+++ b/ngapp/package.json
@@ -24,6 +24,7 @@
     "@popperjs/core": "^2.9.2",
     "@tweenjs/tween.js": "^18.6.4",
     "@types/quill": "^1.3.10",
+    "@types/ws": "^8.5.4",
     "angular-text-input-highlight": "^1.4.3",
     "bootstrap": "^5.0.2",
     "chart.js": "^4.2.0",
