--- a/ngapp/package.json
+++ b/ngapp/package.json
@@ -81,6 +81,7 @@
     "karma-jasmine": "~5.0.1",
     "karma-jasmine-html-reporter": "^2.0.0",
     "schematics-scss-migrate": "^1.3.14",
+    "source-map-explorer": "^2.5.3",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
     "typescript": "^4.8.4"
