download table data

--- a/ngapp/package.json
+++ b/ngapp/package.json
@@ -41,6 +41,7 @@
     "jquery": "^3.5.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.21",
+    "mat-table-exporter": "^15.0.0",
     "mic-check": "^1.1.0",
     "ng2-pdf-viewer": "^9.1.4",
     "ngx-quill": "^16.2.1",
