Got docx to html conversion working on the server

--- a/api/package.json
+++ b/api/package.json
@@ -55,6 +55,7 @@
     "formidable": "^1.2.1",
     "generate-password": "^1.6.0",
     "handlebars": "^4.7.7",
+    "html-segmenter": "file:bin/local-packages/html-segmenter",
     "json5": "^2.2.3",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
