Added call to sentence segmentation endpoint
Continuing to work on the file upload pipeline - next step is to add a part of speech tagging endpoint to the nlp API (this will make a call to the central Abair API)

--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,9 @@
     "start:maddie": "DB=neimhin-dev PORT=42001 nodemon dist/server.js",
     "start:oisin": "DB=neimhin-dev PORT=43001 nodemon dist/server.js"
   },
+  "nodemonConfig": {
+    "ext": "js, jsx, ts, tsx, json, mjs"
+  },
   "jest": {
     "testTimeout": 10000,
     "modulePathIgnorePatterns": [
