--- a/ngapp/package.json
+++ b/ngapp/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@phonlab-tcd/gramadoir-ts": "^0.0.55",
+    "@phonlab-tcd/html2json": "^0.0.2",
     "@popperjs/core": "^2.9.2",
     "@tweenjs/tween.js": "^18.6.4",
     "@types/quill": "^1.3.10",
