adding startup scripts for Conor and Joseph

--- a/api/package.json
+++ b/api/package.json
@@ -14,7 +14,9 @@
     "start:neimhin": "DB=neimhin-dev PORT=41001 nodemon dist/server.js",
     "start:maddie": "DB=neimhin-dev PORT=42001 nodemon dist/server.js",
     "start:oisin": "DB=neimhin-dev PORT=43001 nodemon dist/server.js",
-    "start:david": "DB=neimhin-dev PORT=44001 nodemon dist/server.js"
+    "start:david": "DB=neimhin-dev PORT=44001 nodemon dist/server.js",
+    "start:conor": "DB=neimhin-dev PORT=45001 nodemon dist/server.js",
+    "start:joseph": "DB=neimhin-dev PORT=46001 nodemon dist/server.js"
   },
   "nodemonConfig": {
     "ext": "js, jsx, ts, tsx, json, mjs"
